# GraphicsFinalProj

./: Beacon_obj.mtl  CMakeLists.txt  Creative_scene.json  README.md  README.txt  beacon rendered  geometrydata  new_beacon.mtl  new_scene.mtl  room_lp_obj.mtl
assets/pmd/: goku_great_ape.pmd  untitled.pmx
lib/pmdreader/: mmdadapter.cc
src/: CMakeLists.txt  Cylinder.cpp  Cylinder.h  OBJ_Loader.h  RadiosityScene.cpp  RadiosityScene.h  animation_loader_saver.cc  bbox.cc  bbox.h  bone_geometry.cc  bone_geometry.h  camera.cc  camera.h  config.h  gui.cc  gui.h  json.hpp  kdTree.cpp  kdTree.h  main.cc  mainh.cc  menger.cc  menger.h  procedure_geometry.cc  procedure_geometry.h  radiosityScene.cpp  radiosityScene.h  ray.cpp  ray.h  render_pass.cc  render_pass.h  scene.cpp  scene.h  texture_to_render.cpp  texture_to_render.h
src/shaders/: blending.vert  cylinder.vert  default.frag  default.geom  floor.frag  object.frag  object.geom  object.tcs  object.tes  object.vert  preview.frag  preview_name.frag  preview_name.geom  preview_name.vert  shadow.frag  shadow.geom  shadow.vert
